--- a/blog/src/app/components/blog-item/blog-item.component.html
+++ b/blog/src/app/components/blog-item/blog-item.component.html
@@ -1,1 +1,6 @@
-<p>blog-item works!</p>
+<div class="card h-100">
+    <blog-item-image [image]="image"></blog-item-image>
+    <div class="card-body">
+        <blog-item-text [text]="text"></blog-item-text>
+    </div>
+</div>
