--- a/blog/src/app/components/blog-item-text/blog-item-text.component.html
+++ b/blog/src/app/components/blog-item-text/blog-item-text.component.html
@@ -1,3 +1,7 @@
 <p class="card-text">
     {{ text  | summary:35 }}
 </p>
+
+<a href="#" class="btn btn-primary" [routerLink]="['/blog/detail/' + id]">
+    Więcej
+</a>
