--- a/blog/src/app/components/blog/blog.component.html
+++ b/blog/src/app/components/blog/blog.component.html
@@ -1,6 +1,13 @@
-<div class="row row-cols-1 row-cols-md-3 g-4">
-  <div *ngFor="let item of items" class="col">
-      <blog-item [image]="item.image" [text]="item.text">
-      </blog-item>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4" *ngFor="let item of items$ | filter:filterText">
+      <div class="card">
+        <blog-item
+          [image]="item.image"
+          [text]="item.text"
+          [id]="item.id">
+        </blog-item>
+      </div>
+    </div>
   </div>
 </div>
